# bitcoin-rs

./: .gitignore  AGENTS.md  CONCEPTS.md  Cargo.toml  DEVIATIONS.md  LICENSE  PLAN.md  README.md  clippy.toml  deny.toml
.antigravitycli/: 37f1f7ba-bc8b-4ddb-83f5-245f8015b987.json
crates/chain/: Cargo.toml  README.md
crates/chain/src/: adaptive_difficulty.rs  bip9_cache.rs  header_sync.rs  lib.rs  node.rs  reorg.rs  tip.rs  tree.rs
crates/chain/tests/: header_sync_roundtrip.rs  reorg_deep.rs
crates/coinstats/: Cargo.toml  README.md
crates/coinstats/benches/: coinstats_hotpath.rs  utxo_commit_coinstats.rs
crates/coinstats/src/: lib.rs  muhash3072.rs  persist.rs  stats.rs
crates/coinstats/tests/: muhash_unit.rs  roundtrip.rs  snapshot_with_muhash.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/benches/: verify_transaction_profile.rs  verify_tx.rs
crates/consensus/examples/: kernel_verify_spike.rs
crates/consensus/src/: bip112.rs  bip113.rs  bip141.rs  bip143.rs  bip30.rs  bip34.rs  bip341.rs  bip342.rs  bip65.rs  bip66.rs  bip68.rs  bip9.rs  connect_block.rs  kernel.rs  lib.rs  rust_path.rs  verify_block.rs  verify_tx.rs
crates/consensus/tests/: kernel_block_parity.rs  kernel_parity.rs  vectors.rs
crates/consensus/tests/vectors/scripts/: README.md  legacy_p2pk.json  legacy_p2pkh.json  p2sh_spend.json  segwit_v0_spend.json  taproot_keypath_spend.json  taproot_scriptpath_spend.json
crates/electrum/: Cargo.toml  README.md
crates/electrum/src/: lib.rs  methods.rs  server.rs  session.rs  subscription.rs
crates/electrum/tests/: method_smoke.rs  status_hash_subscribe.rs
crates/filters/: Cargo.toml  README.md
crates/filters/src/: cfheaders.rs  filter_index.rs  gcs.rs  lib.rs
crates/filters/tests/: bip158_vectors.rs  gcs_property.rs
crates/index/: Cargo.toml  README.md
crates/index/src/: index.rs  lib.rs  mempool.rs  status.rs  types.rs
crates/index/tests/: index_roundtrip.rs  status_hash.rs
crates/mempool/: Cargo.toml  README.md
crates/mempool/src/: entry.rs  eviction.rs  lib.rs  pareto.rs  policy.rs  pool.rs  rbf.rs
crates/mempool/tests/: ancestor_limits.rs  pareto_ordering.rs  rbf_bip125.rs
crates/mining/: Cargo.toml  README.md
crates/mining/src/: coinbase.rs  lib.rs  policy.rs  template.rs
crates/mining/tests/: coinbase_template.rs  policy_pareto.rs  template_shape.rs
crates/node/: Cargo.toml  README.md
crates/node/benches/: sync_apply_metrics.rs  sync_pipeline.rs
crates/node/examples/: mainnet_prefix_replay.rs
crates/node/src/: apply.rs  bip9_context.rs  bitcoin_conf_compat.rs  block_source.rs  config.rs  crash_recovery.rs  event_loop.rs  g14_utxo_commit.rs  g2_muhash.rs  import.rs  lib.rs  logging.rs  metrics.rs  p2p_chain.rs  run.rs  shutdown.rs  signal.rs  state.rs  sync.rs  utxo_view.rs  zmq_publisher.rs
crates/node/src/apply/: scratch.rs
crates/node/src/sync/: stage.rs  window.rs
crates/node/tests/: bitcoin_conf_compat.rs  config_layered.rs  crash_recovery.rs  rpc_wiring.rs  shutdown.rs  state_storage.rs  sync_smoke.rs
crates/p2p/: Cargo.toml  README.md
crates/p2p/src/: addrv2.rs  banlist.rs  compactblocks.rs  dispatch.rs  fsm.rs  handshake.rs  inbound.rs  inv.rs  lib.rs  listener.rs  peer.rs  peer_info.rs  subnet.rs  wire.rs  wtxid.rs
crates/p2p/tests/: banlist.rs  handshake_roundtrip.rs  listener_ban.rs  listener_shutdown.rs  subnet.rs  wire_codec.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: block.rs  encode.rs  hash.rs  header.rs  lib.rs  network.rs  outpoint.rs  sighash.rs  tx.rs  varint.rs  version.rs
crates/primitives/tests/: golden.rs  proptest.rs
crates/primitives/tests/testdata/: 0.txids.txt  1.txids.txt  170.txids.txt  173818.txids.txt  363731.txids.txt  481823.txids.txt  481824.txids.txt  624455.txids.txt  709632.txids.txt  800000.txids.txt  880000.txids.txt  91722.txids.txt  91812.txids.txt  91842.txids.txt  91880.txids.txt
crates/pruning/: Cargo.toml  README.md
crates/pruning/src/: block_pruner.rs  lib.rs  policy.rs  undo_pruner.rs  utreexo_only.rs
crates/pruning/tests/: prune_then_reorg.rs  utreexo_no_blocks.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: auth.rs  context.rs  error.rs  handlers.rs  lib.rs  server.rs
crates/rpc/src/handlers/: chain.rs  mempool.rs  mining.rs  network.rs  tx.rs  tx_render.rs  util.rs  wallet.rs
crates/rpc/tests/: auth.rs  core_compat.rs  handler_smoke.rs
crates/script/: Cargo.toml  README.md
crates/script/benches/: interpreter_execute_profile.rs
crates/script/src/: batch.rs  interpreter.rs  lib.rs  opcodes.rs  sighash_cache.rs  sigops.rs  stack.rs  taproot.rs
crates/script/tests/: proptest.rs  script_tests_runner.rs
crates/storage/: Cargo.toml  README.md
crates/storage/benches/: kvstore_backends.rs
crates/storage/src/: column_families.rs  error.rs  fjall_impl.rs  lib.rs  mdbx_impl.rs  redb_impl.rs  rocksdb_impl.rs  trait_.rs
crates/storage/tests/: backend_equivalence.rs
crates/utreexo/: Cargo.toml  README.md
crates/utreexo/src/: accumulator.rs  bridge.rs  lib.rs  proof.rs
crates/utreexo/tests/: proof_roundtrip.rs
crates/utxo/: Cargo.toml  README.md
crates/utxo/benches/: utxo_commit.rs
crates/utxo/src/: defrag.rs  key.rs  lib.rs  record.rs  set.rs  shard.rs  snapshot.rs
crates/utxo/tests/: commit_commute.rs  commit_roundtrip.rs  defrag_invariants.rs  reorg.rs  snapshot_roundtrip.rs
crates/wallet/: Cargo.toml  README.md
crates/wallet/src/: coin_selection.rs  descriptor.rs  fee_bump.rs  finalize.rs  lib.rs  psbt.rs  signer_iface.rs  watcher.rs
crates/wallet/tests/: coin_selection.rs  descriptor_parse.rs  fee_bump.rs  no_seckey.rs  psbt_roundtrip.rs
crates/wallet/tests/fixtures/: test_signer.rs
scripts/: collect-g14-perf-evidence.sh  collect-g2-bitcoind-muhash-samples.sh  fetch-golden.sh  measure-g14-electrum-rss.sh  measure-g14-utxo-commit-p95.sh  produce-g14-criterion-artifact.sh  produce-g14-ibd-manifest.sh  run-g14-bitcoin-core-mainnet-ibd.sh  run-g14-bitcoin-rs-daemon-mainnet-ibd.sh  run-g14-bitcoin-rs-mainnet-ibd.sh  run-g14-mainnet-ibd-criterion.sh
(+13 files in other folders)
