[package]
name = "bitcoin-rs-coinstats"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "bitcoin-rs :: coinstats"

[lints]
workspace = true

[dependencies]
bitcoin-rs-primitives.workspace = true
bitcoin-rs-storage = { workspace = true, default-features = false }
bitcoin-rs-utxo.workspace = true
bitcoin.workspace = true
sha2.workspace = true
ruint.workspace = true
bytemuck.workspace = true
zerocopy.workspace = true
parking_lot.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
rocksdb = ["bitcoin-rs-storage/rocksdb"]
fjall = ["bitcoin-rs-storage/fjall"]
redb = ["bitcoin-rs-storage/redb"]
mdbx = ["bitcoin-rs-storage/mdbx"]

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true
tempfile = "3"

[[bench]]
name = "coinstats_hotpath"
harness = false
