[package]
name = "bitcoin-rs-consensus"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "bitcoin-rs :: consensus"

[lints]
workspace = true

[features]
default = []
kernel = ["dep:bitcoinkernel"]
rocksdb = []
fjall = []
redb = []

[dependencies]
bitcoin-rs-primitives.workspace = true
bitcoin-rs-script.workspace = true
bitcoin.workspace = true
secp256k1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bitcoinkernel = { workspace = true, optional = true }
