[package]
name = "bitcoin-rs-filters"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "bitcoin-rs :: filters"

[lints]
workspace = true

[dependencies]
bitcoin-rs-primitives.workspace = true
bitcoin-rs-storage.workspace = true
bitcoin.workspace = true
bytemuck.workspace = true
zerocopy.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[features]
default = []
rocksdb = ["bitcoin-rs-storage/rocksdb"]
fjall = ["bitcoin-rs-storage/fjall"]
redb = ["bitcoin-rs-storage/redb"]
