[package]
name = "bitcoin-rs-mempool"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "bitcoin-rs :: mempool"

[lints]
workspace = true

[features]
default = []
rocksdb = []
fjall = []
redb = []

[dependencies]
bitcoin-rs-primitives.workspace = true
bitcoin-rs-consensus.workspace = true
bitcoin-rs-script.workspace = true
bitcoin.workspace = true
hashbrown.workspace = true
tinyvec.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
slab.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
