[package]
name = "bitcoin-rs-node"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "bitcoin-rs :: node"

[lints]
workspace = true

[features]
# A node is non-functional without a storage backend, and its `NodeStorage` /
# `TxIndexStorage` enums are entirely backend-cfg-gated — with zero backends the
# `match self` arms are non-exhaustive and the crate fails to compile under
# default features (e.g. `cargo publish` per-crate verify). rocksdb is the
# documented default backend; this keeps the published crate self-contained.
# Local/CI builds pin `--no-default-features --features "..."` and are unaffected.
default = ["rocksdb"]
rocksdb = [
    "bitcoin-rs-chain/rocksdb",
    "bitcoin-rs-coinstats/rocksdb",
    "bitcoin-rs-consensus/rocksdb",
    "bitcoin-rs-electrum/rocksdb",
    "bitcoin-rs-filters/rocksdb",
    "bitcoin-rs-index/rocksdb",
    "bitcoin-rs-mempool/rocksdb",
    "bitcoin-rs-mining/rocksdb",
    "bitcoin-rs-p2p/rocksdb",
    "bitcoin-rs-pruning/rocksdb",
    "bitcoin-rs-rpc/rocksdb",
    "bitcoin-rs-script/rocksdb",
    "bitcoin-rs-storage/rocksdb",
    "bitcoin-rs-utreexo/rocksdb",
    "bitcoin-rs-utxo/rocksdb",
    "bitcoin-rs-wallet/rocksdb",
]
fjall = [
    "bitcoin-rs-chain/fjall",
    "bitcoin-rs-coinstats/fjall",
    "bitcoin-rs-consensus/fjall",
    "bitcoin-rs-electrum/fjall",
    "bitcoin-rs-filters/fjall",
    "bitcoin-rs-index/fjall",
    "bitcoin-rs-mempool/fjall",
    "bitcoin-rs-mining/fjall",
    "bitcoin-rs-p2p/fjall",
    "bitcoin-rs-pruning/fjall",
    "bitcoin-rs-rpc/fjall",
    "bitcoin-rs-script/fjall",
    "bitcoin-rs-storage/fjall",
    "bitcoin-rs-utreexo/fjall",
    "bitcoin-rs-utxo/fjall",
    "bitcoin-rs-wallet/fjall",
]
redb = [
    "bitcoin-rs-chain/redb",
    "bitcoin-rs-coinstats/redb",
    "bitcoin-rs-consensus/redb",
    "bitcoin-rs-electrum/redb",
    "bitcoin-rs-filters/redb",
    "bitcoin-rs-index/redb",
    "bitcoin-rs-mempool/redb",
    "bitcoin-rs-mining/redb",
    "bitcoin-rs-p2p/redb",
    "bitcoin-rs-pruning/redb",
    "bitcoin-rs-rpc/redb",
    "bitcoin-rs-script/redb",
    "bitcoin-rs-storage/redb",
    "bitcoin-rs-utreexo/redb",
    "bitcoin-rs-utxo/redb",
    "bitcoin-rs-wallet/redb",
]
mdbx = [
    "bitcoin-rs-coinstats/mdbx",
    "bitcoin-rs-electrum/mdbx",
    "bitcoin-rs-mining/mdbx",
    "bitcoin-rs-pruning/mdbx",
    "bitcoin-rs-rpc/mdbx",
    "bitcoin-rs-storage/mdbx",
    "bitcoin-rs-utxo/mdbx",
    "bitcoin-rs-wallet/mdbx",
]
bitcoinconsensus = [
    "bitcoin-rs-consensus/bitcoinconsensus",
    "bitcoin-rs-script/bitcoinconsensus",
]
kernel = ["bitcoin-rs-consensus/kernel"]
utreexo = ["dep:bitcoin-rs-utreexo"]
prometheus-http = ["metrics-exporter-prometheus/http-listener"]

[dependencies]
hashbrown.workspace = true
bitcoin-rs-primitives.workspace = true
bitcoin-rs-script.workspace = true
bitcoin-rs-consensus.workspace = true
bitcoin-rs-storage.workspace = true
bitcoin-rs-utxo.workspace = true
bitcoin-rs-utreexo = { workspace = true, optional = true }
bitcoin-rs-chain.workspace = true
bitcoin-rs-index.workspace = true
bitcoin-rs-filters.workspace = true
bitcoin-rs-coinstats.workspace = true
bitcoin-rs-pruning.workspace = true
bitcoin-rs-mempool.workspace = true
bitcoin-rs-p2p.workspace = true
bitcoin-rs-wallet.workspace = true
bitcoin-rs-mining.workspace = true
bitcoin-rs-rpc.workspace = true
bitcoin-rs-electrum.workspace = true

bitcoin.workspace = true
clap.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam-channel.workspace = true
crossbeam-utils.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
compact_str.workspace = true
signal-hook = { workspace = true, features = ["iterator"] }
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
quanta.workspace = true
thiserror.workspace = true
anyhow.workspace = true
zmq.workspace = true

[dev-dependencies]
tempfile = "3"
proptest.workspace = true
anyhow.workspace = true
