[package]
name = "bitcoin-rs-primitives"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "bitcoin-rs :: primitives — hashes, outpoints, varints, tx/block layout"

[lints]
workspace = true

[dependencies]
bitcoin.workspace = true
bitcoin_hashes.workspace = true
bytemuck.workspace = true
ruint.workspace = true
sha2.workspace = true
thiserror.workspace = true
tinyvec.workspace = true
zerocopy.workspace = true

[dev-dependencies]
proptest.workspace = true
