[package]
name = "bitcoin-rs-rpc"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "bitcoin-rs :: rpc"

[lints]
workspace = true

[features]
default = []
rocksdb = ["bitcoin-rs-coinstats/rocksdb", "bitcoin-rs-storage/rocksdb", "bitcoin-rs-p2p/rocksdb"]
fjall = ["bitcoin-rs-coinstats/fjall", "bitcoin-rs-storage/fjall", "bitcoin-rs-p2p/fjall"]
redb = ["bitcoin-rs-coinstats/redb", "bitcoin-rs-storage/redb", "bitcoin-rs-p2p/redb"]
mdbx = ["bitcoin-rs-storage/mdbx"]

[dependencies]
bitcoin-rs-primitives.workspace = true
bitcoin-rs-consensus.workspace = true
bitcoin-rs-chain.workspace = true
bitcoin-rs-index.workspace = true
bitcoin-rs-mempool.workspace = true
bitcoin-rs-p2p.workspace = true
bitcoin-rs-utxo.workspace = true
bitcoin-rs-filters.workspace = true
bitcoin-rs-coinstats.workspace = true
bitcoin-rs-mining.workspace = true
bitcoin-rs-wallet.workspace = true
bitcoin-rs-storage.workspace = true
bitcoin.workspace = true
sonic-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
crossbeam-channel.workspace = true
compact_str.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
