[package]
name = "bitcoin-rs-utreexo"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "bitcoin-rs :: utreexo"

[lints]
workspace = true

[features]
default = []
rocksdb = []
fjall = []
redb = []

[dependencies]
bitcoin-rs-primitives.workspace = true
bitcoin.workspace = true
# Pins the rustreexo transitive stack off encoding 1.0.0 (bitcoin-io 0.3 break).
bitcoin-consensus-encoding.workspace = true
rustreexo.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
